<resources>
    <string name="app_name">Comics World</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menu Strings -->
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>

    <!-- Issues Strings -->
    <string name="issues_drawer_title">Issues</string>
    <string name="issue_details_title">Issue Detail</string>
    <string name="home_screen_issues_image_desc">Comic Image</string>
    <string name="home_screen_favorite_icon_desc">Favorite Image</string>
    <string name="issue_details_activity_title">Issue details:</string>
    <string name="issue_details_cover_date">Cover date:</string>
    <string name="issue_details_store_date">Store date:</string>
    <string name="issue_details_characters">Characters:</string>
    <string name="a11y_issue_cover">Issue cover</string>
    <string name="dummy_issue_name" translatable="false">Road\'s End</string>
    <string name="dummy_issue_details_header" translatable="false">The Walking Dead #168</string>

    <!-- Volumes Strings -->
    <string name="volumes_drawer_title">Volumes</string>
    <string name="volumes_details_title">Volume Detail</string>
    <string name="home_screen_volumes_image_desc">Volume Image</string>
    <string name="a11y_volume_cover">Volume cover</string>
    <string name="dummy_volume_name" translatable="false">The Walking Dead</string>
    <string name="dummy_volume_name_with_number" translatable="false">The Walking Dead #168</string>
    <string name="dummy_date" translatable="false">Jun 7, 2017</string>
    <string name="dummy_publisher">by Skybound</string>
    <string name="dummy_publisher_name">Skybound</string>
    <string name="dummy_issues_count">Issues: 10</string>
    <string name="dummy_year">2007</string>
    <string name="volume_details_publisher">Publisher:</string>
    <string name="volume_details_year">Year:</string>
    <string name="title_not_available">Name not available</string>
    <string name="issue_number">Issue #</string>
    <string name="publisher_text">Publisher:</string>

    <!-- Characters Strings -->
    <string name="characters_drawer_title">Characters</string>
    <string name="characters_details_title">Character Detail</string>
    <string name="home_screen_characters_image_desc">Character Image</string>
    <string name="dummy_character_name" translatable="false">Rick Grimes</string>
    <string name="dummy_character_real_name" translatable="false">Richard Grimes</string>
    <string name="dummy_character_aliases" translatable="false">Alias, Alias, Alias</string>
    <string name="dummy_character_gender" translatable="false">Male</string>
    <string name="dummy_character_origin" translatable="false">Human</string>
    <string name="dummy_character_birthdate" translatable="false">Jul 24, 1975</string>
    <string name="a11y_character_portrait">Character portrait</string>
    <string name="character_details_real_name">Real name:</string>
    <string name="character_details_aliases">Aliases:</string>
    <string name="character_details_birth">Date of birth:</string>
    <string name="character_details_origin">Origin:</string>
    <string name="character_details_gender">Gender:</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>

    <!-- Movies Strings -->
    <string name="movies_drawer_title">Movies</string>
    <string name="home_screen_movies_image_desc">Movie Image</string>
    <string name="movie_screen_release_on">Released On:</string>
    <string name="movie_details_title">Movie Detail</string>
    <string name="a11y_movie_image">Movie Image</string>
    <string name="dummy_movie_name">Mr. X</string>
    <string name="movie_details_release_on">Released on:</string>
    <string name="movie_details_rating">Rating:</string>
    <string name="movie_details_runtime">Runtime:</string>
    <string name="movie_details_Characters">Characters:</string>
    <string name="movie_details_Concepts">Concepts:</string>
    <string name="movie_details_Studios">Studios:</string>
    <string name="movie_details_dummy_release_on">Today</string>
    <string name="movie_details_dummy_rating">5</string>
    <string name="movie_details_dummy_runtime">120</string>
    <string name="movie_details_dummy_Characters">Nothing</string>
    <string name="movie_details_dummy_Concepts">Nothing</string>
    <string name="movie_details_dummy_Studios">Nothing</string>
    <string name="movie_details_minutes">mins</string>

    <!-- My Favorite Strings -->
    <string name="myfavorite_Menu_title">Favorites</string>
    <string name="myfavorite_drawer_title">My Favorites</string>
    <string name="myfavorite_added">Issue added to favorite.</string>
    <string name="myfavorite_deleted">Issue removed from favorite.</string>
    <string name="myfavorite_error">Something went wrong, operation cannot be performed.</string>

    <!--Progress Indicator String-->
    <string name="progress_indicator_home_label">Please wait</string>
    <string name="progress_indicator_home_detail_label">Downloading data</string>

    <!-- Common Strings -->
    <string name="network_error">Cannot fetch result at this time. Please try again later.</string>
    <string name="not_available">Not Available</string>
    <string name="lorem_ipsum" translatable="false">
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
    the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of
    type and scrambled it to make a type specimen book.</string>
    <string name="error_data_not_available">API server is not available!\nPlease check your internet connection and try again.</string>

    <!-- Widget Strings -->
    <string name="appwidget_title_text">Favorite Issues</string>
</resources>
