<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_issues"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/issues_drawer_title" />
        <item
            android:id="@+id/nav_volumes"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/volumes_drawer_title" />
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
            android:title="@string/characters_drawer_title" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/movies_drawer_title" />
    </group>

    <item android:title="@string/myfavorite_Menu_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_favorite"
                    android:icon="@drawable/ic_favorite_black_24dp"
                    android:title="@string/myfavorite_drawer_title" />
            </group>
        </menu>
    </item>

</menu>
