<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_card_edge_margin"
        android:elevation="@dimen/cardview_default_elevation"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/issue_details_screen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/issue_details_header_image_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/a11y_issue_cover"
                tools:src="@drawable/dummy_issue_cover" />
            <!-- Issue info below -->

            <TextView
                android:id="@+id/issue_details_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingBottom="@dimen/material_card_title_block_large_padding_top"
                android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
                android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
                android:paddingTop="@dimen/material_card_title_block_large_padding_top"
                android:textColor="@color/material_color_white"
                android:textSize="@dimen/material_card_title_block_large_title_text_size"
                tools:text="@string/dummy_issue_details_header" />

            <TextView
                android:id="@+id/issue_details_issue_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom"
                android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
                android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
                android:textColor="@color/material_color_white"
                android:textSize="@dimen/material_card_title_block_subtitle_text_size"
                tools:text="@string/dummy_issue_name" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom"
                android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
                android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
                android:paddingTop="@dimen/material_card_title_block_large_padding_top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_details_cover_date"
                    android:textSize="@dimen/material_card_title_block_small_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/issue_details_cover_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
                    android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
                    android:textSize="@dimen/material_card_title_block_small_text_size"
                    tools:text="@string/dummy_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_details_store_date"
                    android:textSize="@dimen/material_card_title_block_small_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/issue_details_store_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
                    android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
                    android:paddingTop="@dimen/material_card_title_block_large_subtitle_margin_top"
                    android:textSize="@dimen/material_card_title_block_small_text_size"
                    tools:text="@string/dummy_date" />

            </GridLayout>

            <TextView
                android:id="@+id/issue_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/material_card_supporting_text_padding_bottom"
                android:paddingEnd="@dimen/material_card_supporting_text_padding_horizontal"
                android:paddingStart="@dimen/material_card_supporting_text_padding_horizontal"
                android:paddingTop="@dimen/material_card_supporting_text_padding_top"
                android:textSize="@dimen/material_card_supporting_text_text_size"
                tools:text="@string/lorem_ipsum" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>